--- a/188217_BaiTap2/188217_BaiTap2/188217_BaiTap2.csproj
+++ b/188217_BaiTap2/188217_BaiTap2/188217_BaiTap2.csproj
@@ -8,8 +8,20 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\js\search.js" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\js\search.js" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\js\search.js" />
   </ItemGroup>
 
 </Project>
